--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+dist/*
+pesterchum.spec
 *.sw?
 *~
 logs/*
@@ -11,7 +13,4 @@ pesterchum.js
 quirks/*
 !quirks/defaults.py
 *.pkl
-
-Pesterchum.dmg
-
 Pesterchum.dmg
