--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: PyInstaller test builds
 on: [push]
 
 jobs:
-  build_ubuntu22_glibc2.31:
+  build_ubuntu22_glibc2-31:
 
     runs-on: ubuntu-20.04
     steps:
