switch to ubuntu-latest

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,9 @@ name: PyInstaller test builds
 on: [push]
 
 jobs:
-  build_ubuntu22_glibc2-31:
+  build_ubuntu:
 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Setup Python 3.11 x64
