--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,9 @@
-name: PyInstaller test builds
+name: PyInstaller builds
 
-on: [push]
+on: [push, workflow_dispatch]
 
 jobs:
   build_ubuntu64_20:
-
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
@@ -30,9 +29,8 @@ jobs:
           name: Pesterchum_linux64.tar.xz
           path: Pesterchum_linux64.tar.xz
 
-  build_win64_latest:
-
-    runs-on: windows-latest
+  build_win64_310:
+    runs-on: windows-2019
     steps:
       - uses: actions/checkout@v3
       - name: Setup Python 3.10 x64
@@ -51,14 +49,39 @@ jobs:
       - name: Run PyInstaller
         run: python3 pyinst.py --no-prompts --onefile --no-upx --crt --no-clean --windowed
       - name: Create archive (.zip)
-        run: tar.exe -a -c -f Pesterchum_win64.zip -C dist Pesterchum
+        run: tar.exe -a -c -f Pesterchum_win64_py310.zip -C dist Pesterchum
       - uses: actions/upload-artifact@v3
         with:
-          name: Pesterchum_win64.zip
-          path: Pesterchum_win64.zip
+          name: Pesterchum_win64_py310.zip
+          path: Pesterchum_win64_py310.zip
+
+  build_win32_38:
+    runs-on: windows-2019
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup Python 3.8 x86
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.8'
+          architecture: 'x86'
+      - name: Update pip
+        run: python -m pip install --upgrade pip
+      - name: Update builds tools
+        run: python -m pip install --upgrade setuptools wheel
+      - name: Install dependencies
+        run: python -m pip install --upgrade PyQt5 certifi
+      - name: Install PyInstaller
+        run: python -m pip install --upgrade PyInstaller
+      - name: Run PyInstaller
+        run: python3 pyinst.py --no-prompts --onefile --no-upx --crt --no-clean --windowed
+      - name: Create archive (.zip)
+        run: tar.exe -a -c -f Pesterchum_win32_py38.zip -C dist Pesterchum
+      - uses: actions/upload-artifact@v3
+        with:
+          name: Pesterchum_win32_py38.zip
+          path: Pesterchum_win32_py38.zip
           
   build_macos64_11:
-
     runs-on: macos-11
     steps:
       - uses: actions/checkout@v3
@@ -83,4 +106,3 @@ jobs:
         with:
           name: Pesterchum_macOS64.tar.xz
           path: Pesterchum_macOS64.tar.xz
- 
