--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Update builds tools
         run: python -m pip install --upgrade setuptools wheel
       - name: Install dependencies
-        run: python -m pip install --upgrade PyQt6 certifi
+        run: python -m pip install -r requirements.txt
       - name: Install PyInstaller
         run: python -m pip install --upgrade PyInstaller
       - name: Run pyinst.py
@@ -43,7 +43,7 @@ jobs:
       - name: Update builds tools
         run: python -m pip install --upgrade setuptools wheel
       - name: Install dependencies
-        run: python -m pip install --upgrade PyQt6 certifi
+        run: python -m pip install -r requirements.txt
       - name: Install PyInstaller
         run: python -m pip install --upgrade PyInstaller
       - name: Run PyInstaller
@@ -69,7 +69,7 @@ jobs:
       - name: Update builds tools
         run: python -m pip install --upgrade setuptools wheel
       - name: Install dependencies
-        run: python -m pip install --upgrade PyQt5 certifi
+        run: python -m pip install -r requirements-qt5.txt
       - name: Install PyInstaller
         run: python -m pip install --upgrade PyInstaller
       - name: Run PyInstaller
@@ -95,7 +95,7 @@ jobs:
       - name: Update builds tools
         run: python -m pip install --upgrade setuptools wheel
       - name: Install dependencies
-        run: python -m pip install --upgrade PyQt6 certifi
+        run: python -m pip install -r requirements.txt
       - name: Install PyInstaller
         run: python -m pip install --upgrade PyInstaller
       - name: Run pyinst.py
