--- a/.pylintrc
+++ b/.pylintrc
@@ -11,7 +11,7 @@ analyse-fallback-blocks=no
 
 # In error mode, checkers without error messages are disabled and for others,
 # only the ERROR messages are displayed, and no reports are done by default.
-errors-only=
+#errors-only=
 
 # Always return a 0 (non-error) status code, even if lint errors are found.
 # This is primarily useful in continuous integration scripts.
@@ -31,7 +31,7 @@ extension-pkg-whitelist=
 # Return non-zero exit code if any of these messages/categories are detected,
 # even if score is above --fail-under value. Syntax same as enable. Messages
 # specified are enabled, while categories only check already-enabled messages.
-fail-on=E,F
+fail-on=all
 
 # Specify a score threshold to be exceeded before program exits with error.
 #fail-under=6
@@ -116,7 +116,7 @@ msg-template=
 #output-format=
 
 # Tells whether to display a full report or only the messages.
-reports=yes
+reports=no
 
 # Activate the evaluation score.
 score=no
@@ -142,13 +142,52 @@ confidence=HIGH,
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use "--disable=all --enable=classes
 # --disable=W".
-#disable=all
+disable=all
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
 # multiple time (only on the command line, not in the configuration file where
 # it should appear only once). See also the "--disable" option for examples.
-#enable=F,E,W
+enable=F, # Fatal
+       E, # Errors
+       # Full groups:
+       unsupported_version,
+       logging,
+       spelling,
+       string,
+       nonascii-checker,
+       # Specific import checks:
+       wildcard-import,
+       # Specific refactoring checks:
+       use-implicit-booleaness-not-len,
+       # Specific basic checks:
+       lost-exception,
+       assert-on-tuple,
+       assert-on-string-literal,
+       self-assigning-variable,
+       comparison-with-callable,
+       nan-comparison,
+       #dangerous-default-value,
+       duplicate-key,
+       duplicate-value,
+       #useless-else-on-loop,
+       expression-not-assigned,
+       confusing-with-statement,
+       unnecessary-lambda,
+       redeclared-assigned-name,
+       pointless-statement,
+       unnecessary-pass,
+       unreachable,
+       eval-used,
+       exec-used,
+       using-constant-test,
+       missing-parentheses-for-call-in-test,
+       comparison-of-constants,
+       literal-comparison,
+       comparison-with-itself,
+       singleton-comparison,
+       #unidiomatic-typecheck,
+
 
 
 [CLASSES]
