Use isinstance() for typechecks.

--- a/.pylintrc
+++ b/.pylintrc
@@ -165,6 +165,9 @@ enable=F, # Fatal
        consider-using-from-import,
        consider-using-in,
        consider-using-join,
+       consider-merging-isinstance,
+       isinstance-second-argument-not-valid-type,
+       unidiomatic-typecheck,
        use-list-literal,
        use-dict-literal,
        useless-object-inheritance,
