Add Qt to pylint extension-pkg-allow-list & simplify action

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Run Pylint
         run: |
           cd ..
-          PYLINTRC=pesterchum-alt-servers/.pylintrc python -m pylint --recursive=y pesterchum-alt-servers
+          python -m pylint "$PWD"
