--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install PyInstaller
         run: python -m pip install --upgrade PyInstaller
       - name: Run pyinst.py
-        run: python3 pyinst.py --no-prompts --onefile --no-upx --no-crt --no-clean --windowed
+        run: python3 pyinst.py --no-prompts --no-upx --no-crt --no-clean --windowed
       - name: Create archive (.tar.xz)
         run: tar -cavf Pesterchum_linux64.tar.xz -C dist Pesterchum
       - uses: actions/upload-artifact@v3
@@ -47,7 +47,7 @@ jobs:
       - name: Install PyInstaller
         run: python -m pip install --upgrade PyInstaller
       - name: Run PyInstaller
-        run: python3 pyinst.py --no-prompts --onefile --no-upx --crt --no-clean --windowed
+        run: python3 pyinst.py --no-prompts --no-upx --crt --no-clean --windowed
       - name: Create archive (.zip)
         run: tar.exe -a -c -f Pesterchum_win64_py311.zip -C dist Pesterchum
       - uses: actions/upload-artifact@v3
@@ -73,7 +73,7 @@ jobs:
       - name: Install PyInstaller
         run: python -m pip install --upgrade PyInstaller
       - name: Run PyInstaller
-        run: python3 pyinst.py --prompts False --onefile True --upx False --crt True --clean False --windowed True
+        run: python3 pyinst.py --prompts False --upx False --crt True --clean False --windowed True
       - name: Create archive (.zip)
         run: tar.exe -a -c -f Pesterchum_win32_py38.zip -C dist Pesterchum
       - uses: actions/upload-artifact@v3
@@ -99,7 +99,7 @@ jobs:
       - name: Install PyInstaller
         run: python -m pip install --upgrade PyInstaller
       - name: Run pyinst.py
-        run: python3 pyinst.py --no-prompts --onefile --no-upx --no-crt --no-clean --windowed
+        run: python3 pyinst.py --no-prompts --no-upx --no-crt --no-clean --windowed
       - name: Create archive (.tar.xz)
         run: tar -cavf Pesterchum_macOS64.tar.xz -C dist Pesterchum.app
       - uses: actions/upload-artifact@v3
