--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Update builds tools
         run: python -m pip install --upgrade setuptools wheel
       - name: Install dependencies
-        run: python -m pip install certifi PyQt6==6.7.1
+        run: python -m pip install -r requirements.txt
       - name: Install PyInstaller
         run: python -m pip install --upgrade PyInstaller
       - name: Run pyinst.py
@@ -43,7 +43,7 @@ jobs:
       - name: Update builds tools
         run: python -m pip install --upgrade setuptools wheel
       - name: Install dependencies
-        run: python -m pip install certifi PyQt6==6.7.1
+        run: python -m pip install -r requirements.txt
       - name: Install PyInstaller
         run: python -m pip install --upgrade PyInstaller
       - name: Run pyinst.py
